test/fixtures/public/fail/semantic/extra/less_than_incomp.jmm
class LessThan {
    public static void main(String[] args) {
        int a;
        boolean b;
        boolean c;
        a = 2;
        b = true;
        c = a < b;
    }
}